quetzal_react/src/styles/Transactions/TransactionDetail.css
.transaction-detail-modal-container {
    display: flex;
    position: fixed;
    align-items: center;
    justify-content: center;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 100;
    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(5px);
}

.transaction-detail-modal {
    background-color: #eeeeee;
    display: flex;
    flex-direction: column;
    position: absolute;
    width: 30%;
    height: auto;
    padding: 24px;
    border-radius: 8px;
    box-sizing: border-box;
    gap: 16px;
}

.datetime-close {
    display: flex;
    flex-direction: row;
    text-align: center;
    align-items: center;
    justify-content: space-evenly;
}

.details-splitter-container {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}
.details-left {
    width: 50%;
    display: flex;
    flex-direction: column;
}
.details-right {
    width: 50%;
}

.bal-type-acc {
    display: flex;
    flex-direction: column;
    text-align: right;
    gap: 4px;
}

.desc-cat {
    display: flex;
    flex-direction: column;
    text-align: left;
    gap: 4px;
}

.datetime {
    font-size: 14px;
}

.balance {
    font-size: 24px;
}

.description {
    font-size: 20px;
}

.category {
    font-size: 12px;
}
.type {
    text-transform: capitalize;
    font-size: 12px;
}

.notes-container {
    color: #777777;
    text-align: left;
    font-size: 12px;
    width: 100%;
}

.transaction-form-container {
    background-color: #eeeeee;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    width: 100%;
    padding-top: 12px;
    padding-bottom: 24px;
    border-radius: 8px;
    box-sizing: border-box;
}

.edit-transaction-form-input {
    width: 100%;
    padding: 10px;
    margin: 10px 0;
    border: 1px solid #999999;
    border-radius: 4px;
    box-sizing: border-box;
    height: 36px;
}

.edit-transaction-form-button {
    width: 100%;
    padding: 10px;
    margin: 20px 0;
    background-color: #444444;
    color: white;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    transition: background-color 0.2s ease-in-out;
}
.edit-transaction-form-button:hover {
    background-color: #666666;
}

.delete-transaction-form-button {
    width: 100%;
    padding: 10px;
    margin-top: 10px;
    background-color: #990000;
    color: white;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    transition: background-color 0.2s ease-in-out;
}
.delete-transaction-form-button:hover {
    background-color: #cc0000;
}
hr {
    width: 95%;
    border: 0.5px solid #bbbbbb;
}

.modal-close-button {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #cccccc;
    border: none;
    font-size: 13px;
    border: 1px solid #bbbbbb;
    transition: background-color 250ms ease;
    height: 16px;
    aspect-ratio: 1 / 1;
    margin-left: auto;
    z-index: 1;
}

.modal-close-button:hover {
    background-color: #dddddd;
}

.expanded-modal {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
}
.expand-button {
    writing-mode: vertical-lr;
    text-orientation: mixed;
}

.collapse-button {
    writing-mode: vertical-lr;
    text-orientation: sideways;
}

.expand-button,
.collapse-button {
    font-size: 12px;
    transition:
        background-color 250ms ease,
        font-size 250ms ease;
}

.expand-button:hover,
.collapse-button:hover {
    font-size: 20px;
}

.modal-close-button,
.expand-button,
.collapse-button {
    cursor: pointer;
}

.details-splitter-container,
.notes-container,
.datetime {
    cursor: default;
}

